--- a/auth/src/main/res/values/strings.xml
+++ b/auth/src/main/res/values/strings.xml
@@ -16,12 +16,10 @@
     <string name="button_password_recovery_text">Trouble remembering your password</string>
     <string name="name_hint">First &amp; last name</string>
     <string name="password_recovery_title">Forgot password</string>
-    <string name="password_recovery_body">Get instructions sent to this email that explain how to
-        reset your password.</string>
+    <string name="password_recovery_body">Get instructions sent to this email that explain how to reset your password.</string>
     <string name="create_account_title">Create account</string>
     <string name="required_field">You can\'t leave this empty.</string>
-    <string name="password_length">Strong passwords have at least %1$d characters and a mix of letters
-        and numbers</string>
+    <string name="password_length">Strong passwords have at least %1$d characters and a mix of letters and numbers</string>
     <string name="invalid_email_address">That email address isn\'t correct</string>
     <string name="missing_email_address">Enter your email address to continue</string>
     <string name="error_weak_password">Password not strong enough. Use at least 6 characters and a mix of letters and numbers.</string>
@@ -29,8 +27,7 @@
     <string name="button_text_send">Send</string>
     <string name="button_text_save">Save</string>
     <string name="require_email_text">Please input email address</string>
-    <string name="confirm_recovery_body">Follow the instructions sent to %1$s to recover your
-        password.</string>
+    <string name="confirm_recovery_body">Follow the instructions sent to %1$s to recover your password.</string>
     <string name="error_email_does_not_exist">That email address doesn\'t match an existing account</string>
     <string name="account_welcomeback">Welcome back</string>
     <string name="finding_credential">Finding a credential…</string>
@@ -45,10 +42,7 @@
     <string name="check_your_email">Check your email</string>
     <string name="recover_password_title">Recover password</string>
     <string name="welcome_back_idp_header">You already have an account</string>
-    <string name="welcome_back_idp_prompt">
-        You\'ve already used <xliff:g id="email_addr" example="jane.doe@example.com">%1$s</xliff:g>.
-        Sign in with <xliff:g id="provider_name" example="Google">%2$s</xliff:g> to continue.
-    </string>
+    <string name="welcome_back_idp_prompt">"You've already used <xliff:g id="email_addr" example="jane.doe@example.com">%1$s</xliff:g>.\nSign in with <xliff:g id="provider_name" example="Google">%2$s</xliff:g> to continue.\n    "</string>
     <string name="welcome_back_password_prompt_body">You\'ve already used
         <xliff:g id="email_addr" example="jane.doe@example.com">%1$s</xliff:g> to sign in. Enter
         your password for that account.</string>
